<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainFragment">

    <LinearLayout
        android:id="@+id/container_zip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/background_header_linear_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_by_city_name"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/textView_header_linearLayout_margin_top"
            android:layout_marginStart="@dimen/textView_header_linearLayout_margin_start"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            android:focusable="true">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/text_input_margin_start"
                android:layout_marginTop="@dimen/text_input_margin_top"
                android:inputType="text"
                android:hint="@string/hint_city_name"
                app:endIconMode="custom"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_zip_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_weather_margin_start"
                android:layout_marginEnd="@dimen/button_weather_margin_end"
                android:layout_marginTop="@dimen/button_weather_margin_top"
                android:layout_gravity="bottom"
                android:text="@string/button_get_weather"
                android:backgroundTint="@color/button_background"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_zip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/location"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/temp_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/temperature"/>
            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/wind_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/wind_speed"/>
            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/humidity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/humidity"/>
            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/visibility_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/visibility"/>
            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/sunrise_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/time_of_sunrise"/>
            <TextView
                android:id="@+id/sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>

            <TextView
                android:id="@+id/sunset_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_header_margin_start"
                android:layout_marginTop="@dimen/textView_header_margin_top"
                android:text="@string/time_of_sunset"/>
            <TextView
                android:id="@+id/sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textView_description_margin_start"
                android:layout_marginTop="@dimen/textView_description_margin_top"
                android:textSize="@dimen/textView_description_textSize"
                android:text="@string/empty_text"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>